fix: fields wrapping in contact page, text fixes in testimonial section

--- a/src/sections/Testimonials/Testimonials.module.scss
+++ b/src/sections/Testimonials/Testimonials.module.scss
@@ -70,6 +70,7 @@
         align-items: center;
         width: 3.125rem;
         height: 3.125rem;
+        text-transform: uppercase;
       }
 
       h6 {
